Bug 1275866 - Clear WebGLTimerQuerys on WebGL GLContext teardown. - r=jerry,jrmuizel