dom/canvas/WebGLTimerQuery.cpp
@@ -26,6 +26,7 @@ WebGLTimerQuery::WebGLTimerQuery(WebGLContext* webgl, GLuint name)
   , mTarget(LOCAL_GL_NONE)
   , mCanBeAvailable(false)
 {
+  mContext->mTimerQueries.insertBack(this);
 }
 
 WebGLTimerQuery::~WebGLTimerQuery()
@@ -45,8 +46,12 @@ WebGLTimerQuery::Create(WebGLContext* webgl)
 void
 WebGLTimerQuery::Delete()
 {
-  mContext->MakeContextCurrent();
-  mContext->gl->fDeleteQueries(1, &mGLName);
+  gl::GLContext* gl = mContext->GL();
+
+  gl->MakeCurrent();
+  gl->fDeleteQueries(1, &mGLName);
+
+  LinkedListElement<WebGLTimerQuery>::removeFrom(mContext->mTimerQueries);
 }
 
 WebGLContext*
